Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28189

Nested Flickables with pressDelay can result in wrong Flickable grabbing gesture

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.0.0 Beta 2
    • None

      In the attached example, flicking vertically in the inner Flickable should cause it to grab the gesture. If the gesture is initiated before the pressDelay timeout then the outer Flickable will grab instead.

        For Gerrit Dashboard: QTBUG-28189
        # Subject Branch Project Status CR V

            Unassigned Unassigned
            martinj Martin Jones
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes